# aoc2025

./: .dir-locals.el  .gitignore  LICENSE  README.md  aoc2025.cabal  fetch.sh  flake.nix
lib/: AoC.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs
