cabal-version: 3.0
name:          aoc2025
version:       0.1.0.0
license:       BSD-3-Clause
author:        Amneesh
maintainer:    natto@weirdnatto.in
build-type:    Simple

common common
  ghc-options:        -Wall -O3
  default-extensions:
    LambdaCase
    MultiWayIf
    TupleSections
    ViewPatterns

  build-depends:
    , base    >=4.14 && <5
    , parsec  >=3

library libaoc
  import:          common
  exposed:         False
  hs-source-dirs:  lib
  exposed-modules: AoC

executable day01
  import:         common
  hs-source-dirs: src
  main-is:        Day01.hs
  build-depends:  libaoc

executable day02
  import:         common
  hs-source-dirs: src
  main-is:        Day02.hs
  build-depends:  libaoc
